update: skills gaps

--- a/src/app/features/me/about-me/skills-and-technologies/skills-and-technologies.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/skills-and-technologies.component.html
@@ -1,10 +1,10 @@
 <section class="flex flex-col gap-7">
   <app-subtitle headline="Skills & Technologies" />
   <div
-    class="grid grid-cols-[repeat(auto-fit,_minmax(18rem,_1fr))] gap-x-12 gap-y-9"
+    class="grid grid-cols-[repeat(auto-fit,_minmax(19rem,_1fr))] gap-x-12 gap-y-9 px-2 sm:px-1 md:px-0"
   >
     <app-skill-card
-      class="size-full"
+      class="w-full max-w-md mx-auto"
       headline="Back-End Development"
       [skills]="[
         'Java',
@@ -17,7 +17,7 @@
       ]"
     />
     <app-skill-card
-      class="size-full"
+      class="w-full max-w-md mx-auto"
       headline="Front-End Development"
       [skills]="[
         'HTML',
@@ -30,12 +30,12 @@
       ]"
     />
     <app-skill-card
-      class="size-full"
+      class="w-full max-w-md mx-auto"
       headline="Mobile Development"
       [skills]="['Dart', 'Flutter']"
     />
     <app-skill-card
-      class="size-full"
+      class="w-full max-w-md mx-auto"
       headline="Tools & Platforms"
       [skills]="['Git', 'Docker', 'Intellij IDEA', 'VSCode', 'Linux']"
     />
