update: hire me gaps

--- a/src/app/features/me/hire-me/hire-me.component.html
+++ b/src/app/features/me/hire-me/hire-me.component.html
@@ -1,4 +1,4 @@
-<main class="p-7 flex flex-col gap-7 w-full max-w-[82rem] mx-auto">
+<main class="px-7 py-10 flex flex-col gap-10 w-full max-w-[82rem] mx-auto">
   <app-title headline="Let's work together" />
   <div class="grid gap-y-12 gap-x-7 lg:grid-cols-3">
     <app-hire-me-card headline="My Contact Media">
