remove: 'me' from navbar items

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -35,7 +35,7 @@
         (onClick)="showNavbar.set(false)"
       />
       <app-navbar-item
-        text="About Me"
+        text="About"
         route="/about-me"
         class="max-sm:w-full"
         (onClick)="showNavbar.set(false)"
@@ -47,7 +47,7 @@
         (onClick)="showNavbar.set(false)"
       />
       <app-navbar-item
-        text="Hire Me"
+        text="Hire"
         route="/hire-me"
         class="max-sm:w-full"
         (onClick)="showNavbar.set(false)"
