--- a/src/app/features/me/about-me/skills-and-technologies/skills-and-technologies.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/skills-and-technologies.component.html
@@ -3,6 +3,7 @@
   <div
     class="grid grid-cols-[repeat(auto-fit,_minmax(19rem,_1fr))] gap-x-14 gap-y-11 px-2 sm:px-1 md:px-0"
   >
+    <app-backend-skills />
     <app-skill-card
       class="w-full max-w-md mx-auto"
       headline="Back-End Development"
