--- a/src/app/features/me/about-me/skills-and-technologies/components/skill-card/skill-card.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/components/skill-card/skill-card.component.html
@@ -7,10 +7,8 @@
         {{ headline() }}
       </h3>
     </header>
-    <div class="flex items-center justify-center gap-7 flex-wrap">
-      @for (skill of skills(); track $index) {
-      <app-skill [skillName]="skill" />
-      }
+    <div class="grid grid-cols-[repeat(auto-fit,_minmax(6rem,_1fr))] gap-2.5">
+      <ng-content />
     </div>
   </article>
 </app-card>
