add: all backend skills

--- a/src/app/features/me/about-me/skills-and-technologies/components/backend-skills/backend-skills.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/components/backend-skills/backend-skills.component.html
@@ -1,4 +1,4 @@
-<app-skill-card headline="Back-End Development" [skills]="[]">
+<app-skill-card headline="Back-End Development">
   <app-skill skillName="Java">
     <svg java-icon></svg>
   </app-skill>
@@ -7,5 +7,17 @@
   </app-skill>
   <app-skill skillName="Spring Boot">
     <svg spring-boot-icon></svg>
+  </app-skill>
+  <app-skill skillName="PostgreSQL">
+    <svg postgresql-icon></svg>
+  </app-skill>
+  <app-skill skillName="MySQL">
+    <svg mysql-icon></svg>
+  </app-skill>
+  <app-skill skillName="Firestore">
+    <svg firestore-icon></svg>
+  </app-skill>
+  <app-skill skillName="MongoDB">
+    <svg mongodb-icon></svg>
   </app-skill>
 </app-skill-card>
