--- a/src/app/features/me/about-me/skills-and-technologies/components/skill-card/skill-card.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/components/skill-card/skill-card.component.html
@@ -7,7 +7,9 @@
         {{ headline() }}
       </h3>
     </header>
-    <div class="grid grid-cols-[repeat(auto-fit,_minmax(6rem,_1fr))] gap-2.5">
+    <div
+      class="grid grid-cols-[repeat(auto-fit,_minmax(6rem,_1fr))] gap-x-5 gap-y-7"
+    >
       <ng-content />
     </div>
   </article>
