add: all mobile skills

--- a/src/app/features/me/about-me/skills-and-technologies/skills-and-technologies.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/skills-and-technologies.component.html
@@ -5,6 +5,7 @@
   >
     <app-backend-skills />
     <app-frontend-skills />
+    <app-mobile-skills />
     <app-skill-card
       class="w-full max-w-md mx-auto"
       headline="Mobile Development"
