fix: hire me form title; remove: unused mobile skills card

--- a/src/app/features/me/hire-me/hire-me.component.html
+++ b/src/app/features/me/hire-me/hire-me.component.html
@@ -4,7 +4,7 @@
     <app-hire-me-card headline="My Contact Media">
       <app-social-media [axis]="socialMediaAxis()" />
     </app-hire-me-card>
-    <app-hire-me-card headline="My Contact Media" class="lg:col-span-2">
+    <app-hire-me-card headline="Send me a message" class="lg:col-span-2">
       <app-form />
     </app-hire-me-card>
   </div>
