add: all tools skills; remove: unused skills list

--- a/src/app/features/me/about-me/skills-and-technologies/skills-and-technologies.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/skills-and-technologies.component.html
@@ -6,10 +6,6 @@
     <app-backend-skills />
     <app-frontend-skills />
     <app-mobile-skills />
-    <app-skill-card
-      class="w-full max-w-md mx-auto"
-      headline="Tools & Platforms"
-      [skills]="['Git', 'Docker', 'Intellij IDEA', 'VSCode', 'Linux']"
-    />
+    <app-tools-skills />
   </div>
 </section>
