add: ngrx skill

--- a/src/app/features/me/about-me/skills-and-technologies/components/frontend-skills/frontend-skills.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/components/frontend-skills/frontend-skills.component.html
@@ -14,6 +14,9 @@
   <app-skill skillName="Angular">
     <svg angular-icon></svg>
   </app-skill>
+  <app-skill skillName="NgRx">
+    <svg ngrx-icon></svg>
+  </app-skill>
   <app-skill skillName="Tailwind CSS">
     <svg tailwind-icon></svg>
   </app-skill>
