update: skill gaps

--- a/src/app/features/me/about-me/skills-and-technologies/components/skill/skill.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/components/skill/skill.component.html
@@ -1,5 +1,5 @@
 <div
-  class="group flex flex-col items-center justify-center gap-y-1.5 bg-primary-700 px-2 py-2.5 rounded-3xl size-full border border-primary-600 ring-1 ring-primary-600 hover:ring-primary-500 shadow-[0_0_10px_2px_var(--color-primary-400)] shadow-primary-400/10 hover:shadow-primary-400/30 duration-500"
+  class="group flex flex-col items-center justify-center gap-y-2 bg-primary-700 px-2 py-2.5 rounded-3xl size-full border border-primary-600 ring-1 ring-primary-600 hover:ring-primary-500 shadow-[0_0_10px_2px_var(--color-primary-400)] shadow-primary-400/10 hover:shadow-primary-400/30 duration-500"
 >
   <div
     class="size-11 sm:size-12 drop-shadow-xs drop-shadow-primary-600 group-hover:scale-110 duration-500"
@@ -7,7 +7,7 @@
     <ng-content />
   </div>
   <span
-    class="text-sm sm:text-base text-center text-primary-100 font-semibold cursor-default group-hover:scale-95 duration-500"
+    class="text-sm sm:text-base text-center text-primary-100 leading-5 font-semibold cursor-default group-hover:scale-95 duration-500"
   >
     {{ skillName() }}
   </span>
