--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,5 +1,9 @@
 <div
-  class="size-full bg-primary-800 p-5 sm:p-6 md:p-7 rounded-xl ring-2 ring-primary-700 hover:ring-primary-600 duration-500 shadow-[0_0_15px_5px_var(--color-primary-800)] hover:shadow-primary-700"
+  class="size-full bg-primary-800 rounded-xl ring-2 ring-primary-700 hover:ring-primary-600 shadow-[0_0_15px_5px_var(--color-primary-800)] hover:shadow-primary-700 transition-shadow duration-500"
+  [ngClass]="{
+    'p-5 sm:p-6 md:p-7': padding() === 'base',
+    'p-3 sm:p-4 md:p-5': padding() === 'sm',
+  }"
 >
   <ng-content />
 </div>
