--- a/src/app/features/me/about-me/certificates/certificates.component.html
+++ b/src/app/features/me/about-me/certificates/certificates.component.html
@@ -1,6 +1,6 @@
-<section class="flex flex-col gap-7">
+<section class="flex flex-col gap-7 w-full max-w-6xl mx-auto">
   <app-subtitle headline="Certificates" />
-  <ul class="flex flex-col gap-3.5">
+  <ul class="flex flex-col gap-y-7">
     @for (certificate of certificates(); track $index) {
     <app-certificate [certificate]="certificate" />
     }
