--- a/src/app/features/me/about-me/certificates/components/certificate/certificate.component.html
+++ b/src/app/features/me/about-me/certificates/components/certificate/certificate.component.html
@@ -1,13 +1,24 @@
-<li class="flex items-center w-full">
+<li class="flex items-center justify-start w-full">
   <a
     [href]="certificate().url"
     target="_blank"
-    class="flex flex-col gap-px w-full text-accent-50 px-3.5 py-2 bg-primary-700 rounded-2xl hover:underline underline-offset-4 text-lg"
+    class="hover:underline underline-offset-4 text-primary-100 w-full"
   >
-    <b>{{ certificate().title }}</b>
-    <span>
-      {{ certificate().institute }} -
-      <span class="italic">{{ certificate().date }}</span>
-    </span>
+    <app-card padding="sm">
+      <article class="flex items-center gap-5">
+        <img
+          src="https://www.landuse-ca.org/wp-content/uploads/2019/04/no-photo-available.png"
+          alt="certificate"
+          class="aspect-video object-cover w-1/3 max-w-52 h-auto rounded-lg"
+        />
+        <div class="flex flex-col gap-px w-2/3">
+          <b class="text-base sm:text-lg">{{ certificate().title }}</b>
+          <span class="text-sm sm:text-base">
+            {{ certificate().institute }} -
+            <i>{{ certificate().date }}</i>
+          </span>
+        </div>
+      </article>
+    </app-card>
   </a>
 </li>
