define: certifications initial state

--- a/src/app/features/me/about-me/certificates/certificates.component.html
+++ b/src/app/features/me/about-me/certificates/certificates.component.html
@@ -9,7 +9,7 @@
     </li>
   </ul>
   <ul class="flex flex-col gap-y-7">
-    @for (certificate of certificates(); track $index) {
+    @for (certificate of store.certificates(); track $index) {
     <app-certificate [certificate]="certificate" />
     }
   </ul>
