--- a/src/app/components/social-button/social-button.component.html
+++ b/src/app/components/social-button/social-button.component.html
@@ -3,13 +3,16 @@
     [href]="url()"
     target="_blank"
     [ngClass]="{
-      'flex items-center gap-5 text-primary-400 font-light hover:text-accent-500 duration-200':
-        axis() === 'y'
+      'flex items-center gap-5': axis() === 'y'
     }"
   >
     <ng-content />
     @if (axis() === 'y') {
-    <span>{{ displayName() }}</span>
+    <span
+      class="text-primary-400 font-light hover:text-accent-500 duration-200 overflow-ellipsis overflow-hidden"
+    >
+      {{ displayName() }}
+    </span>
     }
   </a>
   @if (axis() === 'x') {
