add: container class to each page

--- a/src/app/features/me/about-me/about-me.component.html
+++ b/src/app/features/me/about-me/about-me.component.html
@@ -1,10 +1,10 @@
 <main
-  class="w-full min-h-[calc(100dvh_-_5rem)] p-3 sm:p-4 md:p-5 flex flex-col gap-10 sm:gap-12 md:gap-14"
+  class="container min-h-[calc(100dvh_-_5rem)] mx-auto p-3 sm:p-4 md:p-5 flex flex-col gap-10 sm:gap-12 md:gap-14"
 >
   <app-header />
   <app-skills-and-technologies />
   <div
-    class="max-sm:flex max-sm:flex-col gap-7 md:grid md:grid-cols-2 bg-primary-950 -mx-3 sm:-mx-4 md:-mx-5 p-7 sm:p-9 md:p-11"
+    class="relative w-[calc(100dvw_-_5px)] max-w-none left-1/2 -ml-[50dvw] flex flex-col gap-7 md:grid md:grid-cols-2 bg-primary-950 p-7 sm:p-9 md:p-11"
   >
     <app-experience />
     <app-education />
