--- a/src/app/features/me/home/home.component.html
+++ b/src/app/features/me/home/home.component.html
@@ -1,5 +1,5 @@
 <main
-  class="w-full min-h-[calc(100dvh_-_5rem)] grid place-items-center p-3 sm:p-4 md:p-5"
+  class="container mx-auto min-h-[calc(100dvh_-_5rem)] grid place-items-center p-3 sm:p-4 md:p-5"
 >
   <article
     class="w-full max-w-xl border-4 border-white p-6 sm:p-7 md:p-8 rounded-xl flex flex-col gap-7"
