--- a/src/app/features/me/projects/projects.component.html
+++ b/src/app/features/me/projects/projects.component.html
@@ -1,4 +1,4 @@
-<main class="p-7 sm:px-10 md:px-16 flex flex-col gap-7">
+<main class="container px-7 py-10 flex flex-col gap-10 mx-auto">
   <header class="flex flex-col gap-5">
     <app-title headline="Projects" />
     <p class="text-lg sm:text-xl text-primary-300">
