remove: 'Development' word from skill cards

--- a/src/app/features/me/about-me/skills-and-technologies/components/backend-skills/backend-skills.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/components/backend-skills/backend-skills.component.html
@@ -1,4 +1,4 @@
-<app-skill-card headline="Back-End Development">
+<app-skill-card headline="Back-End">
   <app-skill skillName="Java">
     <svg java-icon></svg>
   </app-skill>
