--- a/src/app/features/me/about-me/skills-and-technologies/components/frontend-skills/frontend-skills.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/components/frontend-skills/frontend-skills.component.html
@@ -1,4 +1,4 @@
-<app-skill-card headline="Front-End Development">
+<app-skill-card headline="Front-End">
   <app-skill skillName="HTML">
     <svg html-icon></svg>
   </app-skill>
