--- a/src/app/features/me/about-me/skills-and-technologies/components/mobile-skills/mobile-skills.component.html
+++ b/src/app/features/me/about-me/skills-and-technologies/components/mobile-skills/mobile-skills.component.html
@@ -1,4 +1,4 @@
-<app-skill-card headline="Mobile Development">
+<app-skill-card headline="Mobile">
   <app-skill skillName="Dart">
     <svg dart-icon></svg>
   </app-skill>
