--- a/src/app/features/me/about-me/certificates/components/certificate/certificate.component.html
+++ b/src/app/features/me/about-me/certificates/components/certificate/certificate.component.html
@@ -2,7 +2,7 @@
   <a
     [href]="certificate().url"
     target="_blank"
-    class="hover:underline underline-offset-4 text-primary-100 w-full"
+    class="hover:underline underline-offset-4 text-primary-400 w-full"
   >
     <app-card padding="sm">
       <article class="flex items-center gap-5">
@@ -12,7 +12,7 @@
           class="aspect-video object-contain w-1/3 max-w-52 h-auto rounded-lg border-2 border-primary-700"
         />
         <div class="flex flex-col gap-1 w-2/3">
-          <b class="text-base sm:text-lg leading-5">
+          <b class="text-base sm:text-lg leading-5 text-primary-100">
             {{ certificate().title }}
           </b>
           <span class="text-sm sm:text-base text-primary-200">
