update: project card design

--- a/src/app/features/me/projects/projects.component.html
+++ b/src/app/features/me/projects/projects.component.html
@@ -8,7 +8,7 @@
       suscipit quasi.
     </p>
   </header>
-  <section class="flex flex-col gap-5 items-center">
+  <section class="flex flex-col gap-y-7 items-center">
     <app-subtitle headline="Featured Projects" />
     <app-project />
   </section>
