--- a/src/app/features/me/projects/components/project/project.component.html
+++ b/src/app/features/me/projects/components/project/project.component.html
@@ -1,5 +1,5 @@
 <app-card padding="sm">
-  <article class="w-full max-w-xs">
+  <article class="w-full">
     <header class="border-b-2 border-primary-600">
       <img
         src="https://images.unsplash.com/photo-1586672806791-3a67d24186c0?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y292ZXIlMjBhcnR8ZW58MHx8MHx8fDA%3D"
@@ -32,9 +32,9 @@
       class="pt-3 sm:pt-4 md:pt-5 text-primary-300 w-full flex items-center justify-between gap-3.5"
     >
       <button
-        class="px-3.5 py-2 rounded-xl border border-primary-400 text-primary-100 hover:bg-primary-400 hover:text-primary-900 duration-200 cursor-pointer flex items-center justify-center gap-2"
+        class="px-3.5 py-2 rounded-xl border border-primary-400 text-primary-100 hover:bg-primary-400 hover:text-primary-900 duration-200 text-sm sm:text-base cursor-pointer flex items-center justify-center gap-2"
       >
-        <svg github-icon class="size-5"></svg>
+        <svg github-icon class="size-4 sm:size-5"></svg>
         Source code
       </button>
       <app-open-live-demo />
