--- a/src/app/features/me/projects/projects.component.html
+++ b/src/app/features/me/projects/projects.component.html
@@ -10,20 +10,20 @@
   </header>
   <section class="flex flex-col gap-y-7 items-center">
     <app-subtitle headline="Featured Projects" />
-    <app-project class="w-full max-w-88" />
+    <app-project-card class="w-full max-w-88" />
   </section>
   <section class="flex flex-col gap-y-7 items-center">
     <app-subtitle headline="All My Projects" />
     <div
       class="w-full grid grid-cols-[repeat(auto-fit,_minmax(20rem,_1fr))] place-items-center gap-x-16 lg:gap-12 gap-y-12"
     >
-      <app-project class="w-full max-w-88" />
-      <app-project class="w-full max-w-88" />
-      <app-project class="w-full max-w-88" />
-      <app-project class="w-full max-w-88" />
-      <app-project class="w-full max-w-88" />
-      <app-project class="w-full max-w-88" />
-      <app-project class="w-full max-w-88" />
+      <app-project-card class="w-full max-w-88" />
+      <app-project-card class="w-full max-w-88" />
+      <app-project-card class="w-full max-w-88" />
+      <app-project-card class="w-full max-w-88" />
+      <app-project-card class="w-full max-w-88" />
+      <app-project-card class="w-full max-w-88" />
+      <app-project-card class="w-full max-w-88" />
     </div>
   </section>
 </main>
