--- a/src/app/features/me/projects/components/project-card-content/project-card-content.component.html
+++ b/src/app/features/me/projects/components/project-card-content/project-card-content.component.html
@@ -1,13 +1,16 @@
 <div class="border-b-2 border-primary-600">
   <p class="text-primary-100 py-2 text-pretty text-sm sm:text-base">
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quo commodi
-    provident obcaecati nulla ipsam. Cum sequi veniam quis odit hic aperiam
-    numquam quos, quas inventore natus ullam illo consequatur.
+    {{ description() }}
+  </p>
+  <p
+    class="border-t border-primary-600 text-accent-500 text-center py-2 text-pretty text-sm sm:text-base"
+  >
+    {{ category() }}
   </p>
   <ul
-    class="border-t border-primary-600 py-2 text-primary-300 flex items-center gap-x-2.5 text-xs sm:text-sm"
+    class="border-t border-primary-600 py-2 text-primary-300 flex items-center justify-around text-xs sm:text-sm"
   >
-    @for (skill of skills; track $index; let i = $index) {
+    @for (skill of skills(); track $index; let i = $index) {
     <li class="py-1 px-2 sm:px-2.5 bg-primary-700 rounded-xl">
       {{ skill }}
     </li>
