--- a/src/app/features/me/projects/components/project-card-content/project-card-content.component.html
+++ b/src/app/features/me/projects/components/project-card-content/project-card-content.component.html
@@ -1,19 +1,43 @@
 <div class="border-b-2 border-primary-600">
-  <p class="text-primary-100 py-2 text-pretty text-sm sm:text-base">
+  <p
+    class="text-primary-100 py-1.5 text-pretty text-sm sm:text-base"
+    [ngClass]="{
+      'line-clamp-3 lg:line-clamp-2': axis() === 'x',
+      'line-clamp-3': axis() === 'y'
+    }"
+  >
     {{ description() }}
   </p>
-  <p
-    class="border-t border-primary-600 text-accent-500 text-center py-2 text-pretty text-sm sm:text-base"
+  <div
+    class="w-full"
+    [ngClass]="{
+      'lg:flex lg:items-center lg:gap-x-2 lg:border-t lg:border-primary-600':
+        axis() === 'x'
+    }"
   >
-    {{ category() }}
-  </p>
-  <ul
-    class="border-t border-primary-600 py-2 text-primary-300 flex items-center justify-around text-xs sm:text-sm"
-  >
-    @for (skill of skills(); track $index; let i = $index) {
-    <li class="py-1 px-2 sm:px-2.5 bg-primary-700 rounded-xl">
-      {{ skill }}
-    </li>
-    }
-  </ul>
+    <p
+      class="text-accent-500 text-center py-1 text-pretty text-sm sm:text-base"
+      [ngClass]="{
+        'max-lg:border-t max-lg:border-primary-600 w-full lg:w-1/4':
+          axis() === 'x',
+        'border-t border-primary-600 w-full': axis() === 'y'
+      }"
+    >
+      {{ category() }}
+    </p>
+    <ul
+      class="py-1.5 text-primary-300 flex items-center justify-around text-xs sm:text-sm"
+      [ngClass]="{
+        'max-lg:border-t max-lg:border-primary-600 w-full lg:w-3/4':
+          axis() === 'x',
+        'border-t border-primary-600 w-full': axis() === 'y'
+      }"
+    >
+      @for (skill of skills(); track $index; let i = $index) {
+      <li class="py-1 px-2 sm:px-2.5 bg-primary-700 rounded-xl">
+        {{ skill }}
+      </li>
+      }
+    </ul>
+  </div>
 </div>
