--- a/src/app/features/me/projects/components/project-card/project-card.component.html
+++ b/src/app/features/me/projects/components/project-card/project-card.component.html
@@ -1,19 +1,41 @@
 <app-card padding="sm">
-  <article class="w-full">
-    <app-project-card-header
-      [headline]="project().title"
-      [thumbnail]="project().thumbnail"
+  <article
+    class="w-full"
+    [ngClass]="{
+      'lg:flex lg:items-center lg:gap-x-3 lg:relative': axis() === 'x'
+    }"
+  >
+    <img
+      [src]="project().thumbnail"
+      alt="project cover photo"
+      class="aspect-video object-cover rounded-2xl border-2 border-primary-700"
+      [ngClass]="{ 'lg:w-2/5 lg:h-auto': axis() === 'x' }"
     />
-    <app-project-card-content
-      [description]="project().lang.description.en"
-      [category]="project().category"
-      [skills]="project().skills"
-    />
-    <footer
-      class="pt-3 sm:pt-4 md:pt-5 text-primary-300 w-full flex items-center justify-between gap-3.5"
-    >
-      <app-source-code-button />
-      <app-open-live-demo />
-    </footer>
+    <div [ngClass]="{ 'lg:w-3/5': axis() === 'x' }">
+      <h3
+        class="border-b-2 border-primary-600 text-center text-xl sm:text-2xl text-primary-50 font-semibold"
+        [ngClass]="{
+          'pt-2 pb-2 lg:pt-0': axis() === 'x',
+          'py-2': axis() === 'y'
+        }"
+      >
+        {{ project().title }}
+      </h3>
+      <app-project-card-content
+        [axis]="axis()"
+        [description]="project().lang.description.en"
+        [category]="project().category"
+        [skills]="project().skills"
+      />
+      <footer
+        class="pt-3 sm:pt-4 md:pt-5 text-primary-300 w-full flex items-center justify-between gap-3.5"
+        [ngClass]="{
+          '': axis() === 'x'
+        }"
+      >
+        <app-source-code-button />
+        <app-open-live-demo />
+      </footer>
+    </div>
   </article>
 </app-card>
