--- a/src/app/features/me/projects/components/project-card/project-card.component.html
+++ b/src/app/features/me/projects/components/project-card/project-card.component.html
@@ -15,8 +15,8 @@
       <h3
         class="border-b-2 border-primary-600 text-center text-xl sm:text-2xl text-primary-50 font-semibold"
         [ngClass]="{
-          'pt-2 pb-2 lg:pt-0': axis() === 'x',
-          'py-2': axis() === 'y'
+          'pt-2.5 pb-2.5 lg:pt-0': axis() === 'x',
+          'py-2.5': axis() === 'y'
         }"
       >
         {{ project().title }}
@@ -33,8 +33,8 @@
           '': axis() === 'x'
         }"
       >
-        <app-source-code-button />
-        <app-open-live-demo />
+        <app-source-code-button [url]="project().sourceCode" />
+        <app-open-live-demo [url]="project().liveDemo" />
       </footer>
     </div>
   </article>
