--- a/src/app/features/me/projects/components/source-code-button/source-code-button.component.html
+++ b/src/app/features/me/projects/components/source-code-button/source-code-button.component.html
@@ -1,6 +1,7 @@
 <a
   class="px-3.5 py-2 rounded-xl border-2 md:max-lg:border border-primary-400 text-primary-100 hover:bg-primary-300 hover:border-primary-300 hover:text-primary-950 duration-200 text-sm sm:text-base cursor-pointer flex items-center justify-center gap-2"
   [href]="url()"
+  target="_blank"
 >
   <svg github-icon class="size-4 sm:size-5"></svg>
   Source code
