--- a/src/app/features/me/hire-me/components/form/form.component.html
+++ b/src/app/features/me/hire-me/components/form/form.component.html
@@ -26,7 +26,7 @@
   />
   <button
     type="submit"
-    class="px-5 py-2 rounded-xl bg-accent-700 text-accent-50 cursor-pointer hover:text-primary-700 hover:bg-primary-200 duration-200"
+    class="px-5 py-2 rounded-xl bg-accent-700 text-white cursor-pointer hover:text-accent-50 hover:bg-accent-600 active:bg-accent-800 duration-200"
   >
     Send message
   </button>
