--- a/src/app/features/me/about-me/about-me.component.html
+++ b/src/app/features/me/about-me/about-me.component.html
@@ -1,5 +1,5 @@
 <main
-  class="container min-h-[calc(100dvh_-_5rem)] mx-auto p-3 sm:p-4 md:p-5 flex flex-col gap-10 sm:gap-12 md:gap-14"
+  class="container mx-auto p-3 sm:p-4 md:p-5 pb-10 sm:pb-10 md:pb-10 flex flex-col gap-10 sm:gap-12 md:gap-14"
 >
   <app-header />
   <app-skills-and-technologies />
