--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="w-full bg-primary-950 px-7 py-10">
   <div class="container mx-auto flex flex-col gap-y-9">
-    <div class="flex flex-col gap-y-9">
+    <div class="flex flex-col md:grid md:grid-cols-3 gap-x-7 gap-y-9">
       <div class="text-center flex flex-col gap-y-3">
         <p class="text-primary-200">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi amet
