update: website source code link target

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -36,8 +36,10 @@
       <a
         href="https://github.com/AlbenBustamante/portfolio"
         class="text-primary-400"
-        >Website made with <3 by me</a
+        target="_blank"
       >
+        Website made with <3 by me
+      </a>
       <p class="text-primary-100">&copy; 2025 Alben Bustamante</p>
     </div>
   </div>
