--- a/src/app/features/me/about-me/components/bullet-content/bullet-content.component.html
+++ b/src/app/features/me/about-me/components/bullet-content/bullet-content.component.html
@@ -1,16 +1,19 @@
 <div class="flex gap-2 relative">
   <div
-    class="absolute w-0.5 left-3 -translate-x-1/2 top-6 -bottom-4 bg-amber-500 z-20"
+    class="absolute w-0.5 left-3 -translate-x-1/2 top-6 -bottom-8 bg-amber-500 z-20"
+    [ngClass]="{ hidden: !border() }"
   ></div>
   <app-bullet />
-  <div class="flex flex-col gap-3">
-    <h3 class="text-primary-50 text-xl sm:text-2xl font-semibold">
-      {{ headline() }}
-    </h3>
-    <ul class="list-disc flex flex-col gap-1.5 text-primary-300 ml-5 text-lg">
-      @for (item of keypoints(); track $index) {
-      <li>{{ item }}</li>
-      }
-    </ul>
-  </div>
+  <article class="flex flex-col gap-3">
+    <header class="flex flex-col gap-y-0.5">
+      <h3 class="text-primary-50 text-xl sm:text-2xl">
+        <b>{{ headline() }}</b>
+      </h3>
+      <h4 class="text-primary-200 text-lg sm:text-xl">
+        <i>{{ subheadline() }}</i>
+      </h4>
+      <p class="text-base sm:text-lg text-primary-300">{{ year() }}</p>
+    </header>
+    <ng-content />
+  </article>
 </div>
