--- a/src/app/features/me/about-me/components/bullet/bullet.component.html
+++ b/src/app/features/me/about-me/components/bullet/bullet.component.html
@@ -1,4 +1,4 @@
-<div class="size-6 flex items-start justify-center mt-1">
+<div class="size-6 flex items-start justify-center mt-1 sm:mt-1.5">
   <div
     class="size-5 rounded-full bg-accent-500 flex items-center justify-center relative z-30"
   >
