--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,9 @@
 <header
-  class="fixed top-0 left-0 right-0 h-20 bg-primary-950 border-b border-accent-950 flex items-center justify-center px-3 z-40"
+  class="fixed top-0 left-0 right-0 bg-primary-950 border-b border-accent-950 flex items-center justify-center px-3 z-40 duration-500"
+  [ngClass]="{
+    'opacity-100 h-20': !adjust(),
+    'opacity-65 h-16': adjust() && !showNavbar()
+  }"
 >
   <div class="sm:hidden">
     <button
@@ -33,24 +37,28 @@
         route="/home"
         class="max-sm:w-full"
         (onClick)="showNavbar.set(false)"
+        [adjust]="adjust()"
       />
       <app-navbar-item
         text="About"
         route="/about-me"
         class="max-sm:w-full"
         (onClick)="showNavbar.set(false)"
+        [adjust]="adjust()"
       />
       <app-navbar-item
         text="Projects"
         route="/projects"
         class="max-sm:w-full"
         (onClick)="showNavbar.set(false)"
+        [adjust]="adjust()"
       />
       <app-navbar-item
         text="Hire"
         route="/hire-me"
         class="max-sm:w-full"
         (onClick)="showNavbar.set(false)"
+        [adjust]="adjust()"
       />
     </ul>
   </nav>
