--- a/src/app/features/me/about-me/components/bullet-content/bullet-content.component.html
+++ b/src/app/features/me/about-me/components/bullet-content/bullet-content.component.html
@@ -4,7 +4,7 @@
     [ngClass]="{ hidden: !border() }"
   ></div>
   <app-bullet />
-  <article class="flex flex-col gap-3">
+  <article class="flex flex-col gap-y-5">
     <header class="flex flex-col gap-y-0.5">
       <h3 class="text-primary-50 text-xl sm:text-2xl">
         <b>{{ headline() }}</b>
