update: footer links style

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -29,37 +29,63 @@
       <nav class="text-center flex flex-col gap-y-3">
         <p class="text-primary-100 text-lg"><b>Explore</b></p>
         <ul class="text-primary-300 flex flex-col gap-y-2.5">
-          <li><a routerLink="/home" class="">Home</a></li>
           <li>
-            <a routerLink="/about-me">About</a>
+            <a routerLink="/home" class="hover:text-accent-500 duration-300"
+              >Home</a
+            >
           </li>
           <li>
-            <a routerLink="/projects">Projects</a>
+            <a routerLink="/about-me" class="hover:text-accent-500 duration-300"
+              >About</a
+            >
           </li>
-          <li><a routerLink="/hire-me">Hire</a></li>
+          <li>
+            <a routerLink="/projects" class="hover:text-accent-500 duration-300"
+              >Projects</a
+            >
+          </li>
+          <li>
+            <a routerLink="/hire-me" class="hover:text-accent-500 duration-300"
+              >Hire</a
+            >
+          </li>
         </ul>
       </nav>
       <div class="text-center flex flex-col gap-y-3">
         <p class="text-primary-100 text-lg"><b>Get In Touch</b></p>
         <ul class="text-primary-300 flex flex-col gap-y-2.5">
           <li>
-            <a href="mailto:albenbustamante@outlook.com">
+            <a
+              href="mailto:albenbustamante@outlook.com"
+              class="hover:text-accent-500 duration-300"
+            >
               albenbustamante&#64;outlook.com
             </a>
           </li>
-          <li><a href="https://wa.me/573165574868">+57 3165574868</a></li>
+          <li>
+            <a
+              href="https://wa.me/573165574868"
+              class="hover:text-accent-500 duration-300"
+              >+57 3165574868</a
+            >
+          </li>
         </ul>
       </div>
     </div>
     <div class="text-center flex flex-col gap-y-1.5">
-      <a
-        href="https://github.com/AlbenBustamante/portfolio"
-        class="text-primary-400"
-        target="_blank"
-      >
-        Website made with <3 by me
-      </a>
-      <p class="text-primary-100">&copy; 2025 Alben Bustamante</p>
+      <p class="cursor-default text-primary-400">
+        Website made by Alben Bustamante
+      </p>
+      <p class="text-primary-100">
+        Copyright &copy; 2025 |
+        <a
+          class="link text-primary-300 hover:text-accent-500 duration-300"
+          href="https://github.com/AlbenBustamante/portfolio"
+          target="_blank"
+        >
+          Source Code
+        </a>
+      </p>
     </div>
   </div>
 </footer>
