--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,16 +1,18 @@
-<footer class="w-full bg-primary-950 px-7 py-10">
+<footer class="w-full bg-primary-950 px-7 py-9">
   <div class="container mx-auto flex flex-col gap-y-9">
     <div
       class="flex flex-col items-center md:grid md:grid-cols-3 gap-x-7 gap-y-9"
     >
-      <header class="text-center flex flex-col gap-y-3">
-        <div class="text-center flex flex-col gap-y-1.5">
+      <header class="text-center md:text-left flex flex-col gap-y-3">
+        <div class="flex flex-col gap-y-1.5">
           <h6 class="text-primary-50 text-lg">
             <b>Alben Bustamante</b>
           </h6>
           <p class="text-primary-200">Software Developer</p>
         </div>
-        <div class="w-full flex items-center justify-center gap-x-5">
+        <div
+          class="w-full flex items-center justify-center md:justify-start gap-x-5"
+        >
           <app-footer-social-link url="https://github.com/AlbenBustamante">
             <svg github-icon></svg>
           </app-footer-social-link>
@@ -51,9 +53,9 @@
           </li>
         </ul>
       </nav>
-      <div class="text-center flex flex-col gap-y-3">
+      <div class="text-center md:text-right flex flex-col gap-y-1.5">
         <p class="text-primary-100 text-lg"><b>Get In Touch</b></p>
-        <ul class="text-primary-300 flex flex-col gap-y-2.5">
+        <ul class="text-primary-300 flex flex-col gap-y-1.5">
           <li>
             <a
               href="mailto:albenbustamante@outlook.com"
@@ -72,6 +74,7 @@
         </ul>
       </div>
     </div>
+    <hr class="border-primary-900" />
     <div class="text-center flex flex-col gap-y-1.5">
       <p class="cursor-default text-primary-400">
         Website made by Alben Bustamante
