--- a/src/app/features/me/about-me/experience/experience.component.html
+++ b/src/app/features/me/about-me/experience/experience.component.html
@@ -1,9 +1,6 @@
 <section class="flex flex-col gap-7">
   <app-subtitle headline="Experience" />
   @for (item of store.experiences(); track $index; let i = $index) {
-  <app-experience-item
-    [experience]="item"
-    [border]="i !== store.experiences().length - 1"
-  />
+  <app-experience-item [experience]="item" />
   }
 </section>
