--- a/src/app/features/me/about-me/education/components/education-item/education-item.component.html
+++ b/src/app/features/me/about-me/education/components/education-item/education-item.component.html
@@ -1,5 +1,6 @@
 <app-bullet-content
-  [border]="border()"
+  container="bullet"
+  [bulletBorder]="border()"
   [headline]="education().degree"
   [subheadline]="education().institute"
   [year]="education().year"
