--- a/src/app/features/me/projects/components/project-card/project-card.component.html
+++ b/src/app/features/me/projects/components/project-card/project-card.component.html
@@ -24,6 +24,7 @@
       <app-project-card-content
         [axis]="axis()"
         [description]="project().lang.description.en"
+        [status]="project().status"
         [category]="project().category"
         [skills]="project().skills"
       />
