--- a/src/app/features/me/projects/projects.component.html
+++ b/src/app/features/me/projects/projects.component.html
@@ -11,7 +11,7 @@
   <section class="flex flex-col gap-y-7 items-center">
     <app-subtitle headline="Featured Projects" />
     <ul
-      class="flex items-center gap-x-16 lg:gap-x-12 w-full max-w-md lg:container mx-auto overflow-x-auto snap-x snap-mandatory py-11 px-7 carousel"
+      class="flex items-center gap-x-16 lg:gap-x-12 w-full max-w-md lg:container mx-auto overflow-x-auto snap-x snap-mandatory py-11 px-5 sm:px-6 md:px-7 carousel"
     >
       @for (project of store.featured(); track $index) {
       <li class="flex-[0_0_100%] snap-center carousel-item">
@@ -23,7 +23,7 @@
   <section class="flex flex-col gap-y-7 items-center">
     <app-subtitle headline="All My Projects" />
     <div
-      class="w-full grid grid-cols-[repeat(auto-fit,_minmax(20rem,_1fr))] place-items-center gap-x-16 lg:gap-x-12 gap-y-12"
+      class="w-full grid grid-cols-[repeat(auto-fit,_minmax(18rem,_1fr))] place-items-center gap-x-16 lg:gap-x-12 gap-y-12 px-5 sm:px-6 md:px-7"
     >
       @for (project of store.noFeatured(); track $index) {
       <app-project-card class="w-full max-w-88" [project]="project" />
