--- a/src/app/features/me/about-me/components/header/header.component.html
+++ b/src/app/features/me/about-me/components/header/header.component.html
@@ -1,20 +1,23 @@
 <header
   class="w-full min-h-[calc(100dvh_-_5rem_-_0.75rem_*_2)] sm:min-h-[calc(100dvh_-_5rem_-_2rem)] md:min-h-[calc(100dvh_-_5rem_-_2.5rem)] border-4 border-primary-50 rounded-xl p-5 sm:p-6 flex items-center justify-center"
 >
-  <div class="flex max-sm:flex-col gap-9 size-full">
+  <div
+    class="flex max-md:flex-col items-center gap-9 lg:gap-x-12 size-full w-full md:justify-center"
+  >
     <img
-      src="https://img.freepik.com/premium-vector/default-avatar-profile-icon-social-media-user-image-gray-avatar-icon-blank-profile-silhouette-vector-illustration_561158-3396.jpg?semt=ais_incoming&w=740&q=80"
-      alt="profile picture"
-      class="rounded-full sm:w-1/3 sm:max-w-xs sm:h-auto aspect-square"
+      src="images/about-me/cover4.gif"
+      alt="cover picture"
+      class="max-md:max-h-48 md:w-1/3 lg:w-1/2 sm:max-w-xs h-auto shadow-[0_0_10px_3px_black] shadow-primary-600/30 rounded-full aspect-square object-cover"
     />
-    <div class="sm:w-2/3 flex flex-col gap-5 justify-center">
+    <div class="md:w-2/3 lg:w-1/2 flex flex-col gap-5 justify-center">
       <app-title headline="About me" />
-      <p class="text-lg sm:text-xl text-primary-300 text-pretty">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores,
-        sint natus, quam perspiciatis nihil nisi porro quod molestiae ratione
-        ab, illum qui maiores. Officia atque adipisci fugiat non aperiam vero
-        ratione deleniti doloremque optio repellat.
-      </p>
+      <ul
+        class="flex flex-col gap-y-2.5 text-lg sm:text-xl text-primary-300 text-pretty"
+      >
+        @for (item of description(); track $index) {
+        <li>{{ item }}</li>
+        }
+      </ul>
     </div>
   </div>
 </header>
