--- a/src/app/features/me/projects/projects.component.html
+++ b/src/app/features/me/projects/projects.component.html
@@ -1,15 +1,15 @@
 <main class="container px-7 py-10 flex flex-col gap-10 mx-auto">
   <header class="flex flex-col gap-5">
     <app-title headline="Projects" />
-    <p class="text-lg sm:text-xl text-primary-300">
+    <!--p class="text-lg sm:text-xl text-primary-300">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ex
       architecto perferendis eveniet id. Accusamus quod repellat deleniti
       adipisci asperiores explicabo enim, quae magnam sed nisi sunt dolorem
       suscipit quasi.
-    </p>
+    </p-->
   </header>
   <section class="flex flex-col gap-y-7 items-center">
-    <app-subtitle headline="Featured Projects" />
+    <app-subtitle headline="Featured" />
     <ul
       class="flex items-center gap-x-16 lg:gap-x-12 w-full max-w-md lg:container mx-auto overflow-x-auto snap-x snap-mandatory py-11 px-5 sm:px-6 md:px-7 carousel"
     >
